# pengegyuri

./: .gitignore  README.md
week-01/day-1/dir1/: 1.txt
week-01/day-1/dir2/: 2.txt
week-01/day-1/dir3/: 3.txt
week-01/day-1/dir4/: 4.txt
week-01/day-1/dir5/: 5.txt
week-01/day-1/git-lesson-repository/: tasks.txt  tasksbasic.txt  tasksminusbasic.txt
week-01/day-2/Greets/: Greets.cpp
week-01/day-2/aminalsandlegs/: CMakeLists.txt  main.cpp
week-01/day-2/averageofinput/: main.cpp
week-01/day-2/bmi/: main.cpp
week-01/day-2/codinghours/: main.cpp
week-01/day-2/cuboid/: main.cpp
week-01/day-2/defbasicinfo/: CMakeLists.txt  main.cpp
week-01/day-2/favoritenum/: CMakeLists.txt  main.cpp
week-04/People/: person.cpp  person.h  student.cpp  student.h
week-04/greenfox/: person.h  student.h
week-06/day-6/: .autotools  main.c
week-07/day-2/: main.c
week-10/0thweek_project/: CMakeLists.txt  main.cpp
week-10/0thweek_project/0thweek_project_lib/: func.cpp  func.h
week-10/0thweek_project/0thweek_project_test/: 0thweek_project_test.cpp
week-10/blendtwo/: CMakeLists.txt  main.cpp
week-10/blur/: CMakeLists.txt  main.cpp
week-10/circle/: CMakeLists.txt  main.cpp
week-10/contrast/: CMakeLists.txt  main.cpp
week-10/drawline/: CMakeLists.txt  main.cpp
week-10/ellipse/: CMakeLists.txt  main.cpp
week-10/makegray/: CMakeLists.txt  main.cpp
week-10/morph/: CMakeLists.txt  main.cpp
week-10/openimage/: CMakeLists.txt  main.cpp
week-10/playingwithchannels/: CMakeLists.txt  main.cpp
week-10/playingwithwebcam/: ConsoleApplication1.cpp
(+339 files in other folders)
